--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "",
   "main": "feature_toggle_manager.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "Mehmet Yavuz",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "date-fns": "^2.28.0",
+    "jest": "^28.0.3",
+    "lodash": "^4.17.21",
+    "openpgp": "^5.2.1"
+  }
 }
