--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-reader-maybe",
   "version": "1.0.0",
   "description": "",
-  "main": "feature_toggle_manager.js",
+  "main": "app.js",
   "scripts": {
     "test": "jest"
   },
@@ -12,6 +12,7 @@
     "date-fns": "^2.28.0",
     "jest": "^28.0.3",
     "lodash": "^4.17.21",
-    "openpgp": "^5.2.1"
+    "openpgp": "^5.2.1",
+    "express": "^4.17.1"
   }
 }
